--- a/FinalProject/styles.css
+++ b/FinalProject/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: gray;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%); 
 }
 
 #wrapper {
@@ -21,6 +22,8 @@ header {
 
 h1 {
     margin: 15px;
+    margin-top: 40px;
+    margin-left: 20px;
     font-size: xx-large;
 }
 
@@ -47,10 +50,8 @@ nav ul{
 
 nav li{
     display: inline-block;
-    background-color: white;
     margin: 15px;
     margin-left: 25px;
-    font-size: larger;
     padding: 5px;
     border-radius: 10px;
 }
@@ -58,6 +59,24 @@ nav li{
 nav li a {
     color: black;
     text-decoration: none;
+    background-color: white;    
+    margin: 15px;
+    font-size: larger;
+    padding: 7px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    border: 3px solid black;
+    transition: background-color 1.0s, width 1.0s, color 1.0s;
+}
+
+nav li a:hover {
+    color: white;
+    text-decoration: none;
+    background-color: grey;
+    border: 3px solid white;
+
+
 }
 
 /* main rules */
@@ -65,8 +84,8 @@ main {
     background-color: rgb(255, 134, 229);
     border: 3px solid black;
     grid-column: span 12;
-    /* display: grid;
-    grid-template-columns: repeat(12, 1fr); */
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
     margin-top: 15px;
     border-radius: 20px;
     font-family: 'Raleway', sans-serif;
@@ -76,16 +95,17 @@ main img {
     margin: 10px;
     border-radius: 10px;
     border: 3px solid black;
+    grid-column: span 6;
 }
 
 main p {
     background-color: white;
     border: 3px solid black;
     margin: 10px;
+    margin-left: 25px;
     padding: 10px;
     border-radius: 10px;
     grid-column: span 6;
-    float: left;
 }
 
 main h2 {
@@ -96,6 +116,7 @@ main h2 {
     grid-column: span 6;
     border-radius: 10px;
     text-align: center;
+    grid-column: span 12;
 }
 
 main iframe {
@@ -118,15 +139,58 @@ footer p {
     padding: 10px;
 }
 
-.audio {
+audio {
     grid-column: span 6;
+    margin: 60px;
+    border: 3px solid black;
+    border-radius: 10px;
 }
 
 .Video {
-    padding: 15px;
+    margin: 15px;
     border-radius: 30px;
+    grid-column: span 12;
+    border: 3px solid black;
 }
 
 .bi {
     float: right;
+    margin: 10px;
 }
+
+a {
+    color: black;
+    transition: background-color 1.0s, width 1.0s, color 1.0s;
+}
+
+a:hover {
+    color: gray;
+}
+
+.description {
+    grid-column: span 12;
+    border-radius: 20px;
+}
+
+#contactForm {
+    grid-column: span 12;
+    align-self: center;
+}
+
+.label {
+    font-size: larger;
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.top {
+    font-weight: 300px;
+}
+
+  form {
+    grid-column: span 5;
+    margin: 25px;
+    margin-left: 65px;
+    margin-top: 100px;
+    padding: 25px;
+  }
